[package]
name = "portapack-hal"
version = "0.1.1"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/sharebrained/rust-portapack-hal"
description = "Hardware abstraction layer for PortaPack"
keywords = ["portapack", "hackrf", "sdr", "hal"]
authors = [
	"Jared Boone <jared@sharebrained.com>",
]

[dependencies]
lpc43xx     = { git = "https://github.com/jboone/rust-lpc43xx.git"           }
hackrf-hal  = { git = "https://github.com/sharebrained/rust-hackrf-hal.git"  }
lcd-ili9341 = { git = "https://github.com/sharebrained/rust-lcd-ili9341.git" }
